Les colonnes des repos contiennent la clé primaire